added: base of products list logic
